# faildns

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  faildns.default  faildns.py  faildns.service  pyproject.toml
.github/workflows/: test.yml
tests/: __init__.py  test_faildns_integration.py  test_faildns_unit.py
